--- a/BigDecision_protoTypes/pages/home.html
+++ b/BigDecision_protoTypes/pages/home.html
@@ -125,7 +125,7 @@
   
   <div class="app-content">
     <div class="home-header">
-      <div class="home-greeting">你好，用户</div>
+      <div class="home-greeting">你好</div>
       <div class="home-subtitle">需要帮你做决定吗？</div>
       <button class="create-btn">
         <i class="fas fa-plus"></i>
